--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
-# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1-0; orgstrap-block-checksum: 24dbc0d54579db9f0972c6218bdfc1b924e54d8b230d82c2e9c55c833af19cdd; -*-
+# -*- org-adapt-indentation: nil; org-edit-src-content-indentation: 0; orgstrap-cypher: sha256; orgstrap-norm-func-name: orgstrap-norm-func--dprp-1-0; orgstrap-block-checksum: a35a43d7f44304bf1f1900f957697b70a975fc02813998389f1b219f65f171fb; -*-
 # [[orgstrap][jump to orgstrap block for this file]]
 #+title: Orgstrap: Executable Org files
 #+startup: showall
@@ -31,7 +31,7 @@ set -e "-C" "-e" "-e"
 { args=;file=;MyInvocation=;__p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > "${null}"
 $file = $MyInvocation.MyCommand.Source
 { file=$0;PATH=$__op;rm ${__p}/=;rmdir ${__p};} > "${null}"
-emacs -batch -no-site-file -eval "(let (vc-follow-symlinks) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode) find-file-literally) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))" "${file}" -- ${args} "${@}"
+emacs -batch -no-site-file -eval "(let (vc-follow-symlinks) (defun org-restart-font-lock ()) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode) find-file-literally) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))" "${file}" -- ${args} "${@}"
 exit
 <# powershell open
 #+end_src
@@ -1650,7 +1650,7 @@ which is not present in the versions of Org released with Emacs < 26.
 
 # XXX must keep this in sync manually to support old versions of org
 #+name: orgstrap-shebang-body
-: "set -e \"-C\" \"-e\" \"-e\"\n{ null=/dev/null;} > \"${null:=/dev/null}\"\n{ args=;file=;MyInvocation=;__p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > \"${null}\"\n$file = $MyInvocation.MyCommand.Source\n{ file=$0;PATH=$__op;rm ${__p}/=;rmdir ${__p};} > \"${null}\"\nemacs -batch -no-site-file -eval \"(let (vc-follow-symlinks) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode) find-file-literally) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))\" \"${file}\" -- ${args} \"${@}\"\nexit\n<# powershell open"
+: "set -e \"-C\" \"-e\" \"-e\"\n{ null=/dev/null;} > \"${null:=/dev/null}\"\n{ args=;file=;MyInvocation=;__p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > \"${null}\"\n$file = $MyInvocation.MyCommand.Source\n{ file=$0;PATH=$__op;rm ${__p}/=;rmdir ${__p};} > \"${null}\"\nemacs -batch -no-site-file -eval \"(let (vc-follow-symlinks) (defun org-restart-font-lock ()) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode) find-file-literally) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))\" \"${file}\" -- ${args} \"${@}\"\nexit\n<# powershell open"
 
 #+caption: init helpers
 #+name: orgstrap-init-helper-defuns
@@ -2160,7 +2160,7 @@ minimal as possible is critical.
 ;; Author: Tom Gillespie
 ;; URL: https://github.com/tgbugs/orgstrap
 ;; Keywords: lisp org org-mode bootstrap
-;; Version: 1.5.5                             (ref:orgstrap.el-version)
+;; Version: 1.5.6                             (ref:orgstrap.el-version)
 ;; Package-Requires: ((emacs "24.4"))
 
 ;;;; License and Commentary
@@ -2225,22 +2225,22 @@ minimal as possible is critical.
 *** Simple
 #+name: test-portable
 #+begin_src bash :var THIS_FILE=(buffer-file-name) :results none
-emacs-24 -Q $THIS_FILE
 emacs-25 -Q $THIS_FILE
 emacs-26 -Q $THIS_FILE
 emacs-27 -Q $THIS_FILE
 emacs-28 -Q $THIS_FILE
-emacs-29-vcs -Q $THIS_FILE
+emacs-29 -Q $THIS_FILE
+emacs-30 -Q $THIS_FILE
 #+end_src
 
 #+name: test-minimal
 #+begin_src bash :var THIS_FILE=(buffer-file-name) :results none
-emacs-24 -Q orgstrap-minimal.org
 emacs-25 -Q orgstrap-minimal.org
 emacs-26 -Q orgstrap-minimal.org
 emacs-27 -Q orgstrap-minimal.org
 emacs-28 -Q orgstrap-minimal.org
-emacs-29-vcs -Q orgstrap-minimal.org
+emacs-29 -Q orgstrap-minimal.org
+emacs-30 -Q orgstrap-minimal.org
 #+end_src
 *** Matrix
 Before running the tests below you need to generate [[file:./orgstrap-autoloads.el]].
@@ -2270,7 +2270,7 @@ of Emacs you will be testing against.
 # XXX regenerate autoloads, it seems that the version in 26 works for everyone
 #+name: test-matrix-run
 #+begin_src bash :results drawer output
-versions=( 24 25 26 27 28 29-vcs )
+versions=( 25 26 27 28 29 30 )
 test_files=( test-no-lv-list.org test-lv-list-portable test-lv-list-minimal )
 for v in ${versions[@]}; do
 [ -d test/emacs-$v ] || mkdir -p test/emacs-$v
@@ -2404,7 +2404,7 @@ errors and warnings. Using Emacs 26 ensures that bytecode is forward
 and backward compatible.
 #+begin_src elisp :noweb yes :results drawer
 (ow-run-command "emacs" "-batch" "-f" "batch-byte-compile" "orgstrap.el")
-(ow-run-command "emacs-26" "-batch" "-f" "batch-byte-compile" "orgstrap.el")
+(ow-run-command "emacs-27" "-batch" "-f" "batch-byte-compile" "orgstrap.el")
 (delete-file "orgstrap.elc")
 #+end_src
 *** Run test matrix
@@ -2438,6 +2438,12 @@ Things that need to be done for a release.
 :PROPERTIES:
 :CUSTOM_ID: changelog
 :END:
+** 1.5.6
+- Update ~orgstrap--shebang-body~ for Emacs 30.1 and Org 9.7.11.
+
+  Workaround for issue where ~org-restart-font-lock~ is not defined
+  when defcustom tries to run ~org-link--set-link-display~.
+
 ** 1.5.5
 - Fix missing paren.
 
