--- a/shebang.org
+++ b/shebang.org
@@ -15,7 +15,7 @@ set -e "-C" "-e" "-e"
 { args=;file=;MyInvocation=;__p=$(mktemp -d);touch ${__p}/=;chmod +x ${__p}/=;__op=$PATH;PATH=${__p}:$PATH;} > "${null}"
 $file = $MyInvocation.MyCommand.Source
 { file=$0;PATH=$__op;rm ${__p}/=;rmdir ${__p};} > "${null}"
-emacs -batch -no-site-file -eval "(let (vc-follow-symlinks) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode) find-file-literally) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))" "${file}" -- ${args} "${@}"
+emacs -batch -no-site-file -eval "(let (vc-follow-symlinks) (defun org-restart-font-lock ()) (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp)))) (let ((file (pop argv)) enable-local-variables) (find-file-literally file) (end-of-line) (when (eq (char-before) ?\^m) (let ((coding-system-for-read 'utf-8)) (revert-buffer nil t t)))) (let ((enable-local-eval t) (enable-local-variables :all) (major-mode 'org-mode) find-file-literally) (require 'org) (org-set-regexps-and-options) (hack-local-variables)))" "${file}" -- ${args} "${@}"
 exit
 <# powershell open
 #+end_src
@@ -303,6 +303,13 @@ A breakdown of the elisp that appears in the =-eval= string.
   ;; in `vc-follow-link' if for whatever reason you need to work
   ;; from the truename of the file then the adjustment can be made
   ;; in the orgstrap block itself
+
+  (defun org-restart-font-lock ()) ; a bug in the version of org shipped
+  ;; with emacs 30.1 means that the :set function for `org-link-descriptive'
+  ;; (`org-link--set-link-display') is called before `org-restart-font-lock'
+  ;; is defined, causing the shebang block to fail, this seemingly cannot
+  ;; be avoided by other means because `org-restart-font-lock' is defined
+  ;; in org.el further down the file than the call to (require 'ol)
 
   (defun orgstrap--confirm-eval (l _) (not (memq (intern l) '(elisp emacs-lisp))))
   ;; allow elisp blocks to run without prompting, this bypasses the
